--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,5 @@ jobs:
       run: blossom-ci
       env: 
         CI_SERVER: ${{ secrets.CI_SERVER }}
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
