--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,4 @@ jobs:
       run: blossom-ci
       env: 
         CI_SERVER: ${{ secrets.CI_SERVER }}
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        REPO_DATA: ${{ secrets.GITHUB_TOKEN }}
