--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Start blossom ci
-      run: ls -l
+      run: export
       env: 
         CI_SERVER: ${{ secrets.CI_SERVER }}
         REPO_DATA: ${{ secrets.GITHUB_TOKEN }}
