--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,19 +7,19 @@ name: blossom-ci
 on:
   issue_comment:
     types: [created]
-
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created'
   build:
     # The type of runner that the job will run on
     runs-on: [self-hosted, linux, blossom]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
     # Runs a single command using the runners shell
     - name: Start blossom ci
+      if: github.event.comment.body == '/blossom-ci'
       run: blossom-ci
       env: 
         CI_SERVER: ${{ secrets.CI_SERVER }}
