--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,14 @@ name: blossom-ci
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  pull_request_review_comment:
+  issue_comment:
     types: [created]
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created'
   build:
-    if: github.event.comment.body == '/blossom-ci'
+    if: github.event.comment.body == ${{ secrets.CI_TRIGGER_TEXT }}
     # The type of runner that the job will run on
     runs-on: [self-hosted, linux, blossom]
 
