--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ on:
     types: [created]
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
+jobs:     
   # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created'
   build:
-    if: github.event.comment.body == secrets.CI_TRIGGER_TEXT
+    if: contains(secrets.CI_TRIGGER_TEXT, github.event.comment.body)
     # The type of runner that the job will run on
     runs-on: [self-hosted, linux, blossom]
 
