--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ on:
     
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:     
-  # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created'
+  # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created':
   build:
-    if: contains(secrets.CI_TRIGGER_TEXT, github.event.comment.body)
+    if: github.event.comment.body == "/blossom-ci"
     # The type of runner that the job will run on
     runs-on: [self-hosted, linux, blossom]
 
