--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       run: blossom-ci
       env: 
         CI_SERVER: ${{ secrets.CI_SERVER }}
-        REPO_DATA: ${{ secrets.GITHUB_TOKEN }}
+        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
