--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,27 @@
 # This is a basic workflow to help you get started with Actions
 
-name: blossom-ci
+name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the branch-0.2 branch
 on:
   issue_comment:
     types: [created]
-    
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:     
-  # This workflow contains a single job called "build"- if: github.event_name == 'release' && github.event.action == 'created':
+jobs:
+  # This workflow contains a single job called "build"
   build:
-    if: github.event.comment.body == '/blossom-ci'
     # The type of runner that the job will run on
-    runs-on: [self-hosted, linux, blossom]
+    runs-on: ubuntu-latest
+    if: github.event.comment.body == '/blossom-ci'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Start blossom ci
-      run: blossom-ci
-      env: 
-        CI_SERVER: ${{ secrets.CI_SERVER }}
-        REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: Synopsys Detect
+        uses: blackducksoftware/github-action@2.0.1
+        with:
+          # Synopsys Detect arguments
+          args: --blackduck.url="${{ secrets.BLACKDUCK_URL}}" --blackduck.api.token="${{ secrets.BLACKDUCK_API_TOKEN}}"
